# best-practices-rag

./: .env.example  README.md  pyproject.toml
best_practices_rag/: agent_defs.py  cli.py  config.py  global_config.py  graph_models.py  graph_store.py  knowledge_base.py  logging_setup.py  parser.py  search.py  setup_schema.py  staleness.py  storage.py  tui.py  tui_install.py
best_practices_rag/_claude_files/agents/: bp-gap-handler.md  bp-pipeline.md  bp-synthesizer.md
best_practices_rag/_claude_files/commands/: bp.md  bpr.md
best_practices_rag/_claude_files/infra/: .env.example  docker-compose.yml
best_practices_rag/_claude_files/skills/best-practices-rag/references/: bp-pipeline-interface.md  synthesis-format-codegen.md  synthesis-format-research.md  synthesis-format.md  tech-versions.md
best_practices_rag/_claude_files/skills/best-practices-rag/scripts/: query_kb.py  search_exa.py  store_result.py
best_practices_rag/commands/: codex_model.py  opencode_model.py
best_practices_rag/migrations/: V0001__initial_schema.cypher
best_practices_rag/resources/agents/: bp-pipeline.md
best_practices_rag/resources/commands/: bp.md  bpr.md
best_practices_rag/resources/infra/: .env.example  docker-compose.yml
best_practices_rag/templates/: bp_command.py  bp_pipeline_agent.py
best_practices_rag/ui/: console.py
tests/: test_cli.py  test_config.py  test_global_config.py  test_knowledge_base.py  test_logging_setup.py  test_migrations.py  test_parser.py  test_release.py  test_search.py  test_staleness.py  test_storage.py  test_templates.py  test_tui.py
(+1 files in other folders)
